--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "python-jose[cryptography]>=3.5.0",
     "resend>=2.21.0",
     "sqlalchemy[asyncio]>=2.0.46",
+    "uvicorn>=0.30.0",
 ]
 
 [dependency-groups]
