--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,3 +30,7 @@ services:
 networks:
   crypalgos-network:
     driver: bridge
+    enable_ipv6: true
+    ipam:
+      config:
+        - subnet: 2001:db8:1::/64
