--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiohttp>=3.13.3",
     "alembic>=1.18.3",
     "asyncpg>=0.31.0",
     "fastapi[standard]>=0.128.5",
@@ -14,9 +15,11 @@ dependencies = [
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "python-jose[cryptography]>=3.5.0",
+    "pyzmq>=27.1.0",
     "resend>=2.21.0",
     "sqlalchemy[asyncio]>=2.0.46",
     "uvicorn>=0.30.0",
+    "websockets>=16.0",
 ]
 
 [dependency-groups]
